--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Spring Boot / Secrets
+/src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
